Docs: doxygen output: remove fixed width of 980 pixels, make it work better on smaller screens and browser windows

--- a/docs/config/github-markdown-theme/doxygen_extra.css
+++ b/docs/config/github-markdown-theme/doxygen_extra.css
@@ -139,8 +139,9 @@ a.el {
 }
 
 div.contents {
-  width: 980px;
-  padding: 40px;
+  /* width: 980px; */ /* Don't hardwire width, make it friendly to all devices)
+  /* padding: 40px; */
+  padding: 30px;
   margin-top: -1px;
   margin-left: auto;
   margin-right: auto;
